
  * Windows: guess location of DjVuLibre DLLs and tools (requires
    python-djvulibre ≥ 0.3.3).
  * Windows: don't rely on atomic renames when saving configuration files.
  * Windows: use the “Application Data” folder to store configuration files
    (unless the XDG_CONFIG_HOME environment variable is set).
  * Non-POSIX systems: don't read configuration from ~/.DjVuSmooth.
  * Reset the SIGCHLD signal to SIG_IGN on start. Thanks to Heinrich
    Schwietering for the bug report.
    http://bugs.debian.org/596232

 -- Jakub Wilk <jwilk@jwilk.net>  Tue, 18 Jan 2011 20:45:01 +0100

djvusmooth (0.2.8) unstable; urgency=low

  * Update the Russian translation, thanks to Kyrill Detinov.
  * Handle directories with non-ASCII characters.
    http://bugs.debian.org/595002
  * Fix editing line/arrow annotations.
    http://bugs.debian.org/595012

 -- Jakub Wilk <jwilk@jwilk.net>  Tue, 31 Aug 2010 15:15:01 +0200

djvusmooth (0.2.7) unstable; urgency=low

  * Add Russian translation, contributed by Kyrill Detinov.
  * Handle non-ASCII metadata keys.
    Thanks to Aleš Kapica for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Sat, 26 Jun 2010 14:34:19 +0200

djvusmooth (0.2.6) unstable; urgency=low

  * Add keyboard shortcut Ctrl+G for “Go to page…”.
    Thanks to Kyrill Detinov for the bug report and the patch.
  * Reopen document after save, so that it's possible to display non-cached
    pages. Thanks to Kyrill Detinov for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Tue, 15 Jun 2010 21:08:26 +0200

djvusmooth (0.2.5) unstable; urgency=low

  * Fix setup.py to install all the required packages.
    Thanks to Kyrill Detinov for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Thu, 08 Apr 2010 18:06:50 +0200

djvusmooth (0.2.4) unstable; urgency=low

  * Fix regression in handling sidebar events with wxWidgets 2.8. Thanks to
    Janusz S. Bień for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 31 Mar 2010 12:53:04 +0200
